test: fix tests for adapting them to new API